err/minivect.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/minivect'...
Compiling './lib/python3.5/site-packages/minivect/ctypes_conversion.py'...
***   File "./lib/python3.5/site-packages/minivect/ctypes_conversion.py", line 94
    def convert_from_ctypes(type):
                                 ^
SyntaxError: import * only allowed at module level

Listing './lib/python3.5/site-packages/minivect/include'...
Compiling './lib/python3.5/site-packages/minivect/minivisitor.py'...
***   File "./lib/python3.5/site-packages/minivect/minivisitor.py", line 199
    print "%s: %s" % (prefix, self.format_node(node))
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minivect/pydot'...
Compiling './lib/python3.5/site-packages/minivect/pydot/pydot.py'...
***   File "./lib/python3.5/site-packages/minivect/pydot/pydot.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minivect/tests'...
Compiling './lib/python3.5/site-packages/minivect/tests/test_specializations.py'...
***   File "./lib/python3.5/site-packages/minivect/tests/test_specializations.py", line 47
    print x.strides, y.strides, z.strides
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/minivect-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
